--- a/quiz_page.html
+++ b/quiz_page.html
@@ -22,10 +22,12 @@
             <div id="output" class="col-lg-6"></div>
             <br>
             <br>
-            <label>Sent You a Math Problem: <b style="color: red">Try solving it</b></label>
+            <label>Send Him a Math Problem: <b style="color: red">He will try solving it</b></label>
             <br>
-            <input id="word" class="form-control" placeholder="Answer here" type="text">
+            <input id="1stno" class="form-control" placeholder="1st no">
             <br>
+	    <input id="2stno" class="form-control" placeholder="2nd no">
+	    <br>
             <button onclick="send()" class="btn btn-success" style="width: 30%">Send</button>
         </center>
     </div>
