--- a/quiz_page.html
+++ b/quiz_page.html
@@ -24,9 +24,9 @@
             <br>
             <label>Send Him a Math Problem: <b style="color: red">He will try solving it</b></label>
             <br>
-            <input id="1stno" class="form-control" placeholder="1st no">
+            <input id="1stno" class="form-control" placeholder="1st no" type="number">
             <br>
-	    <input id="2stno" class="form-control" placeholder="2nd no">
+	    <input id="2stno" class="form-control" placeholder="2nd no" type="number">
 	    <br>
             <button onclick="send()" class="btn btn-success" style="width: 30%">Send</button>
         </center>
